--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -20,3 +20,28 @@
 .d-block {
 height:25rem;
 }
+
+.row{
+background-color: #F0FFFF;
+}
+.body{
+background-color: rgb(240, 248, 255);
+}
+
+body {
+    margin-bottom: 60px;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
