--- a/blog/myblog/templates/myblog/post_detail.html
+++ b/blog/myblog/templates/myblog/post_detail.html
@@ -12,7 +12,7 @@
         <div class="col-lg-8">
             <nav aria-label="breadcrumb" class="mt-4">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ post.h1 }}</li>
                 </ol>
             </nav>
@@ -21,6 +21,11 @@
             <p class="lead">
             {{ post.content|safe }}
             </p>
+            <div class="d-flex justify-content-end">
+    {% for tag in post.tag.all %}
+        <a href="{% url 'tag' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+    {% endfor %}
+</div>
             <hr>
             <p class="lead text-right">Автор: {{ post.author }}</p>
             <hr>
