--- a/blog/myblog/templates/myblog/tag.html
+++ b/blog/myblog/templates/myblog/tag.html
@@ -1,6 +1,6 @@
 {% extends './base.html' %}
 {% load static %}
-{% block title %}Поиск{% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block header %}
     {% include './block/header.html' %}
