--- a/blog/myblog/templates/myblog/signin.html
+++ b/blog/myblog/templates/myblog/signin.html
@@ -29,7 +29,7 @@
                 <label for="inputPassword" class="sr-only">Пароль</label>
             {{ form.password }}
             </div>
-                <button class="btn mt-2 btn-lg btn-primary btn-block" type="submit">Регистрация</button>
+                <button class="btn mt-2 btn-lg btn-primary btn-block" type="submit">Вход</button>
         </form>
     </div>
 {% endblock %}
